InterpreterConfiguration, FileSourceCode, JmmVmLauncher, refactoring